[gd_scene load_steps=5 format=2]

[ext_resource path="res://start-assets/player.png" type="Texture2D" id=1]
[ext_resource path="res://src/actors/player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31, 25.75 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 46, 42.5 )

[node name="player" type="CharacterBody2D"]
position = Vector2( 191, 364 )
collision_mask = 13
script = ExtResource( 2 )
speed = Vector2( 300, 100000 )

[node name="sprite" type="Sprite2D" parent="."]
position = Vector2( 1, 6 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 26.75 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 334, -32 )
current = true
limit_smoothed = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
position_smoothing_speed = 7.0
drag_left_margin = 0.0
drag_top_margin = 1.0
drag_right_margin = 0.5
drag_bottom_margin = 0.22

[node name="enemydectorArea2D" type="Area2D" parent="."]
position = Vector2( 1, 49 )
collision_layer = 0
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemydectorArea2D"]
modulate = Color( 0.00392157, 0.0117647, 1, 1 )
position = Vector2( 0, -42 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.4

[connection signal="area_entered" from="enemydectorArea2D" to="." method="_on_enemydectorArea2D_area_entered"]
[connection signal="body_entered" from="enemydectorArea2D" to="." method="_on_enemydectorArea2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
